unpackaged/main/default/objects/Bitacora__c/Bitacora__c.object-meta.xml
<CustomObject>
    <label>Bitácora</label>
    <nameField>
        <displayFormat>L-{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Nombre de Bitácora</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bitácora</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>