unpackaged/main/default/objects/Bitacora__c/fields/CodigoDeError__c.field-meta.xml
<CustomField>
    <fullName>CodigoDeError__c</fullName>
    <label>Código de Error</label>
    <length>50</length>
    <type>Text</type>
</CustomField>