unpackaged/main/default/objects/Bitacora__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>