unpackaged/main/default/objects/Bitacora__c/fields/Operacion__c.field-meta.xml
<CustomField>
    <fullName>Operacion__c</fullName>
    <label>Operación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actualización</fullName>
            </value>
            <value>
                <fullName>Aprobación</fullName>
            </value>
            <value>
                <fullName>Creación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>