unpackaged/main/default/objects/Bitacora__c/fields/ServicioWeb__c.field-meta.xml
<CustomField>
    <fullName>ServicioWeb__c</fullName>
    <label>Servicio Web</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Servicio de Solicitudes de Terrenos en Salesforce</fullName>
            </value>
            <value>
                <fullName>Servicio de Solicitudes de Terrenos en Sharepoint</fullName>
            </value>
            <value>
                <fullName>Servicio de Solicitudes de Trámites y Transferencias en Salesforce</fullName>
            </value>
            <value>
                <fullName>Servicio de Solicitudes de Trámites y Transferencias en Oracle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>