unpackaged/main/default/objects/Bitacora__c/fields/TipoDeError__c.field-meta.xml
<CustomField>
    <fullName>TipoDeError__c</fullName>
    <label>Tipo de Error</label>
    <length>50</length>
    <type>Text</type>
</CustomField>