unpackaged/main/default/objects/Bitacora__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Fecha__c</columns>
    <columns>ServicioWeb__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>